--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,12 @@ typing_extensions==4.9.0
 uvicorn==0.29.0
 watchfiles==0.21.0
 websockets==12.0
+blinker==1.9.0
+colorama==0.4.6
+Flask==3.1.0
+flask-cors==5.0.1
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+packaging==24.2
+Werkzeug==3.1.3
